force-app/main/default/objects/PLR_Effort__c/PLR_Effort__c.object-meta.xml
<CustomObject>
    <description>Object used to capture general effort spent on a Pursuit Lead Request</description>
    <label>PLR Effort</label>
    <nameField>
        <displayFormat>PLR-E-{00000000}</displayFormat>
        <label>PLR Effort #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLR Efforts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>