force-app/main/default/objects/PLR_Effort__c/fields/Effort_Date__c.field-meta.xml
<CustomField>
    <fullName>Effort_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Effort Date</label>
    <type>Date</type>
</CustomField>