force-app/main/default/objects/PLR_Effort__c/fields/Pursuit_Lead_Request__c.field-meta.xml
<CustomField>
    <fullName>Pursuit_Lead_Request__c</fullName>
    <label>Pursuit Lead Request</label>
    <referenceTo>Pursuit_Lead_Request__c</referenceTo>
    <relationshipLabel>PLR Efforts</relationshipLabel>
    <relationshipName>PLR_Efforts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>